add animated moves

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <td id=8></td>
       </tr>
     </table>
-
-    <!-- <div id='test'><span>x</span></div> -->
+    <div id=next></div>
   </body>
 </html>
